@@ -13,7 +13,7 @@ docker compose up -d
 ## Tests connexions
 ### Test connexion mastodon
 ```bash
-python scripts/test_mastodon.py
+python scripts/tests/test_mastodon.py
 ```
 
 - **Objectif** : Vérification Token + instance .
@@ -32,7 +32,9 @@ mastodon_stream
  
 ### Tester la connexion Mastodon → Kafka
 ```bash
-python mastodon_to_kafka.py   
+docker exec -it spark bash
+pip install Mastodon.py confluent-kafka python-dotenv
+python scripts/tests/test_mastodon_to_kafka.py   
 ```
 - **Objectif** : lancer le script qui récupère les toots et les publie dans Kafka.
 - **Résultat attendu** : 
@@ -50,11 +52,25 @@ docker exec -it kafka kafka-console-consumer.sh --bootstrap-server kafka:9092 --
 - **Résultat attendu** : plusieurs messages JSON correspondant aux toots
 
 ```bash
-wsl -d Ubuntu -u root  
+wsl -d Ubuntu
 sudo apt install python3-venv -y
 python3 -m venv venv_linux
 source venv_linux/bin/activate
 pip install -r requirements.txt 
-docker-compose exec spark pip install pyspark==3.5.1
-docker-compose exec spark python /home/jovyan/scripts/spark_streaming.py
+
+docker exec -it spark bash
+pip install pyspark
+
+spark-submit   --conf "spark.driver.extraJavaOptions=--add-opens=java.base/javax.security.auth=ALL-UNNAMED"   --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,org.postgresql:postgresql:42.6.0   /home/jovyan/scripts/spark_streaming.py
+
+spark-submit   --conf "spark.driver.extraJavaOptions=--add-opens=java.base/javax.security.auth=ALL-UNNAMED"   --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,org.postgresql:postgresql:42.6.0   /home/jovyan/scripts/mastodon_historical_batch.py
 ```
+
+
+docker exec -it spark bash
+
+pip install Mastodon.py confluent-kafka python-dotenv
+
+
+
+
